# arma-gm

./: .gitignore  CLAUDE.md  README.md
.history/tools/: pyproject_20260316174824.toml  pyproject_20260316175950.toml  pyproject_20260316180033.toml  pyproject_20260316180048.toml
arma-extension/: Cargo.toml  README.md
arma-extension/.cargo/: config.toml
arma-extension/src/: chunking.rs  http_client.rs  lib.rs
arma-mod/: README.md  hemtt.toml
arma-mod/addons/main/: $PBOPREFIX$  config.cpp
arma-mod/addons/main/functions/: fnc_cmdArtilleryStrike.sqf  fnc_cmdCallCas.sqf  fnc_cmdCreateRoadblock.sqf  fnc_cmdDespawnGroup.sqf  fnc_cmdMoveSquad.sqf  fnc_cmdPositionSquad.sqf  fnc_cmdReinforce.sqf  fnc_cmdRetreat.sqf  fnc_init.sqf  (+22 more)
arma-mod/missions/ArmaGM_CityDefense.Stratis/: description.ext  init.sqf  initServer.sqf
gm-server/: README.md  config.yaml  pyproject.toml
gm-server/src/gm_server/: config.py  main.py  server.py
gm-server/src/gm_server/graph/: cache.py  context_builder.py  model.py  registry.py  serializer.py
gm-server/src/gm_server/llm/: client.py  prompt_builder.py  response_parser.py
gm-server/src/gm_server/logic/: decision_loop.py  pacing.py  state_manager.py  validator.py
gm-server/src/gm_server/models/: commands.py  game_state.py
gm-server/src/gm_server/prompts/: examples.txt  system.txt
gm-server/src/gm_server/tests/fixtures/: sample_state.json
shared/: README.md
shared/maps/stratis/: strategic_graph.json
shared/schemas/: commands.json  game_state.json
tools/: README.md  graph_visualizer.py  mock_arma_client.py  pyproject.toml
(+4 files in other folders)
